--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
   </head>
   <body>
 
-    <header class="header">
+    <header class="header">      
+      <picture>
+        <source srcset="images/bear_PNG1184.webp" type="image/webp">
+        <img src="images/bear_PNG1184.png" width="320" height="240" alt="Bear">
+      </picture>
+        
+      <picture>
+        <source srcset="images/apple_PNG12503.webp" type="image/webp">
+        <img src="images/apple_PNG12503.png" width="320" height="240" alt="Apple">
+      </picture>
+      
       <nav class="nav">
         <div class="nav__menu"> <!-- nav__menu--closed -->
           <a class="nav__logo">  <!-- href на главной странице не указываем -->
