--- a/index.html
+++ b/index.html
@@ -3,13 +3,26 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>HTML Academy: Пинк</title>
+    <title>PD73.ru - studio</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-
+    <svg style="display:none">
+      <symbol viewBox="0 0 800 800" id="social__item--vk">
+        <path d="M393 566c-135 0-208-143-276-285-10-21 6-23 16-23l81-1c12 0 17 9 20 15 13 31 66 142 92 129 18-9 15-107 4-122-7-9-20-12-26-13-5-1 3-11 13-16 18-9 87-9 111-3 28 7 19 32 19 95 0 20-4 50 11 58 24 12 81-101 91-131 3-8 9-11 19-11h85c20 0 27 1 30 8 5 12-9 40-44 87-57 77-65 70-17 114 46 42 55 63 57 66 14 28-11 34-21 34h-76c-9 0-21 0-38-11-29-19-55-70-76-64-17 5-20 34-21 53-1 16-10 21-20 21h-34z"/>
+      </symbol>
+      <symbol viewBox="0 0 800 800" id="social__item--fb">
+        <path d="M445 643h-90V419h-75v-87h75v-64q0-55 32-86 30-29 80-29 28 0 67 3v78h-47q-42 0-42 38v60h86l-11 87h-75v224z"/>
+      </symbol>
+      <symbol viewBox="0 0 800 800" id="social__item--tw">
+        <path d="M679 239s-21 34-55 57c7 156-107 329-314 329-103 0-169-50-169-50s81 17 163-45c-83-5-103-77-103-77s23 6 50-2c-93-23-89-110-89-110s23 14 50 14c-84-65-34-148-34-148s76 107 228 116c-22-121 117-177 188-101 37-6 71-27 71-27s-12 41-49 61c30-2 63-17 63-17z"/>
+      </symbol>
+      <symbol viewBox="0 0 800 800" id="social__item--inst">
+        <path d="M150 400c0-119 0-166 42-208s88-42 208-42 166 0 208 42 42 89 42 208 0 166-42 208-88 42-208 42-166 0-208-42-42-89-42-208zm455 0c0-114 0-148-29-176-29-29-62-29-176-29s-148 0-176 29c-29 29-29 62-29 176s0 148 29 176c29 29 62 29 176 29s148 0 176-29c29-29 29-62 29-176zM400 272a128 128 0 1 1 0 256 128 128 0 0 1 0-256zm0 211c46 0 83-37 83-83s-37-83-83-83-83 37-83 83 37 83 83 83zm163-216c0 16-13 30-30 30-16 0-30-14-30-30 0-17 14-30 30-30 17 0 30 13 30 30z"/>
+      </symbol>
+    </svg>
     <header class="header">      
-      <picture>
+      <!--<picture>
         <source srcset="images/bear_PNG1184.webp" type="image/webp">
         <img src="images/bear_PNG1184.png" width="320" height="240" alt="Bear">
       </picture>
@@ -17,49 +30,99 @@
       <picture>
         <source srcset="images/apple_PNG12503.webp" type="image/webp">
         <img src="images/apple_PNG12503.png" width="320" height="240" alt="Apple">
-      </picture>
+      </picture>-->
       
       <nav class="nav">
-        <div class="nav__menu"> <!-- nav__menu--closed -->
+        <div class="nav__menu">
           <a class="nav__logo">  <!-- href на главной странице не указываем -->
-            <img class="nav__img" src="logo.jpg" alt="PINK logo">
+            <!--<img class="nav__img" src="logo.jpg" alt="PINK logo">-->
+            Skydance Studio
           </a>
-          <a class="nav-btn  nav-btn--close"></a>
+          <a class="nav__btn  nav__btn--close"></a>  <!-- по умолчанию открыто -->
         </div>
         <ul class="nav__items"> <!-- nav__items--hidden -- спрятать меню -->
           <li class="nav__item">
-            <a class="nav__link" href="index.html">Главная</a>
+            <a class="nav__link" href="#about">О нас</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link" href="photo.html">Фотографии</a>
+            <a class="nav__link" href="#teachers">Наши тренеры</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link" href="form.html">Конкурс</a>
-          </li>
+            <a class="nav__link" href="#shedule">Расписание</a>
+          </li>          
           <li class="nav__item">
-            <a class="nav__link" href="http://www.htmlacademy.ru">HTML academy</a>
-          </li>
+            <a class="nav__link" href="#contacts">Контакты</a>
+          </li>          
         </ul>
       </nav>
 
     </header>
 
-    <section class="download">
-      <div class="download__wrapper">
-        <p class="download__title"> <!-- в мобильной версии прячем -->
-          Взгляните <br>на жизнь<br>иначе!
-        </p>
-        <a class="download__btn" href="url">Скачать приложение</a>
-        <figure class="download__icons">
-          <img class="download__icon  download__icon-mac" src="../../img/logo-apple.svg" alt="icon">
-          <img class="download__icon  download__icon-android" src="./../img/logo-android.svg" alt="icon">
-          <img class="download__icon  download__icon-windows" src="./../img/logo-microsoft.svg" alt="icon">
-          <figcaption class="download__desc">
-              Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8
-          </figcaption>
-        </figure>
-      </div>
+    <section class="about" id="about">
+      <h2 class="about__title">Skydance Studio</h2>
+      <p class="about__text">
+        студия Pole Dance в Ульяновске
+        Мы самые крутые, работаем давно, наши тренеры самые лучшие, посещают 
+        крутые мастер классы крутых чуваков и т.д.
+      </p>
     </section> <!-- end download -->
+
+
+    <section class="teachers" id="teachers">
+      <h2 class="teachers__title">Наши тренеры</h2>
+      <div class="teachers__items">
+        <article class="teachers__item">
+          <p class="teachers__name">
+            Ксения Кислицина
+          </p>
+          <picture class="teachers__photo">
+            <source srcset="images/kseniya.webp" type="image/webp">
+            <img src="images/kseniya.jpg" width="280" alt="Ксения Кислицина">
+          </picture>
+          <div class="teachers__lessons">
+            <strong>Направления:</strong>
+            Pole Dance, Stretching 
+          </div>
+          <ul class="social">
+            <li class="social__item">
+              <a class="social__item  social__item--vk" href="https://vk.com/k.kislitsina">
+                <svg>
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#social__item--vk">
+                  </use>
+                </svg>
+              </a>
+            </li> 
+            <li class="social__item">
+              <a class="social__item  social__item--fb" href="fb.com">
+                <svg>
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#social__item--fb">
+                  </use>
+                </svg>
+              </a>
+            </li> 
+            <li class="social__item">
+              <a class="social__item  social__item--tw" href="twitter.com">
+                <svg>
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#social__item--tw">
+                  </use>
+                </svg>
+              </a>
+            </li> 
+            <li class="social__item">
+              <a class="social__item  social__item--inst" href="instagram.com">
+                <svg>
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#social__item--inst">
+                  </use>
+                </svg>
+              </a>
+            </li>            
+          </ul>          
+        </article>
+      </div>
+    </section>
+
+
+
 
     <section class="features">
       <div class="features__header">
@@ -113,7 +176,7 @@
           <!--<img class="features__main-logo" src="../../img/iphone-screen-mobile@1x.png" width=157 height=320 alt="features logo">
           -->
         </div>
-
+        
       </div> <!-- end features-main -->
 
     </section> <!-- end features -->
@@ -245,6 +308,7 @@
       </div>
 
     </footer> <!-- end footer -->
+    <div id="contacts">Contacts</div>
 
   </body>
 </html>
