Добавлен скрипт для кнопки меню

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>PD73.ru - studio</title> 
-    <link rel="stylesheet" href="css/style.css">    
+    <link rel="stylesheet" href="css/style.min.css">    
   </head>
   <body>
     <svg style="display:none">
@@ -356,5 +356,6 @@
       </ul> 
     </footer>
   
+  <script src="js/script.js"></script>
   </body>
 </html>
