Добавлена установка размера iframe

--- a/index.html
+++ b/index.html
@@ -368,5 +368,9 @@
     </footer>
 
   <script src="js/script.js"></script>
+  <script>
+    var frameSchedule = document.querySelector('#schedule-frame');
+    frameSchedule.style.height = "1387"; // если данные не обновятся - расписание будет ролностью развернуто    
+  </script>
   </body>
 </html>
