--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <a class="nav__link" href="#teachers">Наши тренеры</a>
               </li>
               <li class="nav__item">
-                <a class="nav__link" href="#schedule">Расписание</a>
+                <a class="nav__link" href="schedule.html">Расписание</a>
               </li>
               <li class="nav__item">
                 <a class="nav__link" href="#contacts">Как нас найти</a>
@@ -295,23 +295,28 @@
       </div>
     </section>
 
-
-    <section class="schedule">
-      <div class="schedule__wrapper">
-        <h2 class="schedule__title" id="schedule">Расписание</h2>
-        <iframe src="Schedule.html" id="schedule-frame" scrolling="no">
-        </iframe>
-      </div>
-    </section>
-
     <section class="contacts" id="contacts">
-      <h2 class="contacts__title">Как нас найти</h2>
-      <div class="contacts__map">
-        <picture>
-          <source srcset="images/map_320x240.webp" type="image/webp">
-          <img src="images/map_320x240.jpg" alt="Карта">
-        </picture>
-      </div>
+      <div class="contacts__wrapper">
+        <h2 class="contacts__title">Как нас найти</h2>
+        <div class="contacts__flex">  <!-- flex для изменения расположения на планшетах и десктоп -->
+          <div class="contacts__map">        
+            <h3 class="contacts__map-title">На карте</h3>
+            <!-- Google map только на планшетах и десктопах -->
+            <iframe class="contacts__google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4654.2013830618325!2d48.39343591952537!3d54.31985124961942!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x415d3769aa2afbff%3A0x3b997beeb8a3fd83!2zMi3QuSDQv9C10YAuINCc0LjRgNCwLCAyNCwg0KPQu9GM0Y_QvdC-0LLRgdC6LCDQo9C70YzRj9C90L7QstGB0LrQsNGPINC-0LHQuy4sIDQzMjAxMQ!5e0!3m2!1sru!2sru!4v1487160596562" width="345" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <picture class="contacts__yandex-map">
+              <source srcset="images/map_320x240.webp" type="image/webp">
+              <img src="images/map_320x240.jpg" alt="Карта">
+            </picture>               
+          </div>
+          <div class="contacts__street-photo">
+            <h3 class="contacts__street-title">С улицы 2-й переулок Мира</h3>
+            <picture>
+              <source srcset="images/sky-street.webp" type="image/webp">
+              <img src="images/sky-street.jpg" alt="С улицы">
+            </picture>
+          </div>  
+        </div>  
+      </div>            
     </section>
 
     <footer class="footer">
@@ -321,7 +326,7 @@
             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#geolocation">
             </use>
           </svg>
-          г. Ульяновск, 2-ой переулок Мира, д. 24, 2-ой этаж
+          г. Ульяновск, 2-й переулок Мира, д. 24, 2-й этаж
         </address>
         <a class="footer__phone" href="tel:+78422700228">
           <svg>
