Доделана планшетная и десктопная версии

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <a class="nav__btn  nav__btn--close"></a>  <!-- по умолчанию открыто -->
           </div>
           <ul class="nav__items"> <!-- потом спрячем меню -->
-            <div class="nav__menu">
+            <!--<div class="nav__menu">-->
               <li class="nav__item">
                 <a class="nav__link" href="#about">О нас</a>
               </li>
@@ -79,8 +79,12 @@
               <li class="nav__item">
                 <a class="nav__link" href="#contacts">Как нас найти</a>
               </li>
-            </div>
+            <!--</div>-->
           </ul>
+          <div class="nav__feedback">
+            <p class="nav__feedback--item">Записаться</p>
+            <p class="nav__feedback--item">Перезвоните мне</p>
+          </div>
         </div>
       </nav>
     </header>
