--- a/index.html
+++ b/index.html
@@ -59,9 +59,16 @@
       <nav class="nav">
         <div class="nav__wrapper">
           <div class="nav__menu">
-            <a class="nav__logo">  <!-- href на главной странице не указываем -->
+            <a class="nav__logo-text">  <!-- href на главной странице не указываем -->
               <!--<img class="nav__img" src="logo.jpg" alt="PINK logo">-->
               Skydance Studio
+            </a>
+            <a class="nav__logo">  <!-- href на главной странице не указываем -->
+              <!--<img class="nav__img" src="logo.jpg" alt="PINK logo">-->
+              <picture>
+                <source srcset="images/sd_logo_150x83.webp" type="image/webp">
+                <img src="images/sd_logo_150x83.png" width="150" height="83" alt="Логотит студии">
+              </picture>
             </a>
             <a class="nav__btn  nav__btn--close"></a>  <!-- по умолчанию открыто -->
           </div>
@@ -124,15 +131,7 @@
                     </use>
                   </svg>
                 </a>
-              </li>
-              <li class="social__item">
-                <a class="social__item  social__item--fb" href="fb.com">
-                  <svg>
-                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#social__item--fb">
-                    </use>
-                  </svg>
-                </a>
-              </li>
+              </li>              
               <li class="social__item">
                 <a class="social__item  social__item--tw" href="twitter.com">
                   <svg>
@@ -169,14 +168,6 @@
                 <a class="social__item  social__item--vk" href="https://vk.com/plaza911">
                   <svg>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#social__item--vk">
-                    </use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social__item">
-                <a class="social__item  social__item--fb" href="fb.com">
-                  <svg>
-                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#social__item--fb">
                     </use>
                   </svg>
                 </a>
@@ -222,14 +213,6 @@
                 </a>
               </li>
               <li class="social__item">
-                <a class="social__item  social__item--fb" href="fb.com">
-                  <svg>
-                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#social__item--fb">
-                    </use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social__item">
                 <a class="social__item  social__item--tw" href="twitter.com">
                   <svg>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#social__item--tw">
@@ -270,14 +253,6 @@
                 </a>
               </li>
               <li class="social__item">
-                <a class="social__item  social__item--fb" href="fb.com">
-                  <svg>
-                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#social__item--fb">
-                    </use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social__item">
                 <a class="social__item  social__item--tw" href="twitter.com">
                   <svg>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#social__item--tw">
@@ -304,21 +279,29 @@
         <h2 class="contacts__title">Как нас найти</h2>
         <div class="contacts__flex">  <!-- flex для изменения расположения на планшетах и десктоп -->
           <div class="contacts__map">        
-            <h3 class="contacts__map-title">На карте</h3>
+            <!--<h3 class="contacts__map-title">На карте</h3>-->
+            <address class="contacts__address">
+              г. Ульяновск, 2-й переулок Мира, 24 (рядом с ТЦ "Мираж"). <br>
+              Вход со стороны парковки
+            </address>
             <!-- Google map только на планшетах и десктопах -->
-            <iframe class="contacts__google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4654.2013830618325!2d48.39343591952537!3d54.31985124961942!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x415d3769aa2afbff%3A0x3b997beeb8a3fd83!2zMi3QuSDQv9C10YAuINCc0LjRgNCwLCAyNCwg0KPQu9GM0Y_QvdC-0LLRgdC6LCDQo9C70YzRj9C90L7QstGB0LrQsNGPINC-0LHQuy4sIDQzMjAxMQ!5e0!3m2!1sru!2sru!4v1487160596562" width="345" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <iframe class="contacts__google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2327.0447081718435!2d48.39535431549522!3d54.32084098019481!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x415d3769a88a2963%3A0x18063174b6a45017!2sSkyDance+studio!5e0!3m2!1sru!2sru!4v1487415900789" width="345" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <!--
             <picture class="contacts__yandex-map">
               <source srcset="images/map_320x240.webp" type="image/webp">
               <img src="images/map_320x240.jpg" alt="Карта">
             </picture>               
+          -->
           </div>
+          <!--
           <div class="contacts__street-photo">
             <h3 class="contacts__street-title">С улицы 2-й переулок Мира</h3>
             <picture>
               <source srcset="images/sky-street.webp" type="image/webp">
               <img src="images/sky-street.jpg" alt="С улицы">
             </picture>
-          </div>  
+          </div>
+        -->
         </div>  
       </div>            
     </section>
@@ -330,7 +313,8 @@
             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#geolocation">
             </use>
           </svg>
-          г. Ульяновск, 2-й переулок Мира, д. 24, 2-й этаж
+          г. Ульяновск, 2-й переулок Мира, 24 (рядом с ТЦ "Мираж"). <br>
+          Вход со стороны парковки
         </address>
         <a class="footer__phone" href="tel:+78422700228">
           <svg>
@@ -344,14 +328,6 @@
             <a class="social__item  social__item--vk" href="https://vk.com/skydancestudio">
               <svg>
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#social__item-footer--vk">
-                </use>
-              </svg>
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__item  social__item--fb" href="fb.com">
-              <svg>
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#social__item-footer--fb">
                 </use>
               </svg>
             </a>
