изменено имя файла для расписания из-за проблем с windows

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <a class="nav__link" href="#teachers">Наши тренеры</a>
               </li>
               <li class="nav__item">
-                <a class="nav__link" href="schedule.html">Расписание</a>
+                <a class="nav__link" href="sched.html">Расписание</a>
               </li>
               <li class="nav__item">
                 <a class="nav__link" href="#contacts">Как нас найти</a>
