--- a/sched.html
+++ b/sched.html
@@ -80,7 +80,7 @@
                 <a class="nav__link" href="index.html#teachers">Наши тренеры</a>
               </li>
               <li class="nav__item">
-                <a class="nav__link" href="#schedule.html">Расписание</a>
+                <a class="nav__link" href="#sched.html">Расписание</a>
               </li>
               <li class="nav__item">
                 <a class="nav__link" href="index.html#contacts">Как нас найти</a>
