добавлен доп. контейнер чтобы футер прижимался к низу

--- a/schedule.html
+++ b/schedule.html
@@ -55,6 +55,7 @@
       </symbol>
     </svg>
 
+    <div class="schedule-main">
     <header class="header">
       <nav class="nav">
         <div class="nav__wrapper">
@@ -63,7 +64,7 @@
               <!--<img class="nav__img" src="logo.jpg" alt="PINK logo">-->
               Skydance Studio
             </a>
-            <a class="nav__logo" href="index.html">                
+            <a class="nav__logo" href="index.html">
               <picture>
                 <source srcset="images/sd_logo_150x83.webp" type="image/webp">
                 <img src="images/sd_logo_150x83.png" width="150" height="83" alt="Логотит студии">
@@ -95,13 +96,13 @@
       </nav>
     </header>
 
-    <main class="schedule-main">
-      
+
+
       <section class="schedule">
         <div class="schedule__wrapper">
           <h2 class="schedule__title" id="schedule">Расписание</h2>
           <iframe src="Schedule.html" id="schedule-frame" scrolling="no">
-          </iframe>      
+          </iframe>
         </div>
       </section>
 
@@ -150,7 +151,7 @@
           </ul>
         </div>
       </footer>
-    </main>    
+    </div>    
 
   <script src="js/script.js"></script>
   </body>
