Добавлен скрипт для обработки расписания. Изменен логотип.

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             <a class="nav__logo">  <!-- href на главной странице не указываем -->
               <!--<img class="nav__img" src="logo.jpg" alt="PINK logo">-->
               <picture>
-                <source srcset="images/sd_logo_150x83.webp" type="image/webp">
-                <img src="images/sd_logo_150x83.png" width="150" height="83" alt="Логотит студии">
+                <source srcset="images/logo_sky_dance.webp" type="image/webp">
+                <img src="images/logo_sky_dance.png" width="150" height="83" alt="Логотит студии">
               </picture>
             </a>
             <a class="nav__btn  nav__btn--close"></a>  <!-- по умолчанию открыто -->
@@ -131,7 +131,7 @@
                     </use>
                   </svg>
                 </a>
-              </li>              
+              </li>
               <li class="social__item">
                 <a class="social__item  social__item--tw" href="twitter.com">
                   <svg>
@@ -278,7 +278,7 @@
       <div class="contacts__wrapper">
         <h2 class="contacts__title">Как нас найти</h2>
         <div class="contacts__flex">  <!-- flex для изменения расположения на планшетах и десктоп -->
-          <div class="contacts__map">        
+          <div class="contacts__map">
             <!--<h3 class="contacts__map-title">На карте</h3>-->
             <address class="contacts__address">
               г. Ульяновск, 2-й переулок Мира, 24 (рядом с ТЦ "Мираж"). <br>
@@ -290,7 +290,7 @@
             <picture class="contacts__yandex-map">
               <source srcset="images/map_320x240.webp" type="image/webp">
               <img src="images/map_320x240.jpg" alt="Карта">
-            </picture>               
+            </picture>
           -->
           </div>
           <!--
@@ -302,8 +302,8 @@
             </picture>
           </div>
         -->
-        </div>  
-      </div>            
+        </div>
+      </div>
     </section>
 
     <footer class="footer">
@@ -355,7 +355,7 @@
   <script src="js/script.js"></script>
   <script>
     var frameSchedule = document.querySelector('#schedule-frame');
-    frameSchedule.style.height = "1387"; // если данные не обновятся - расписание будет ролностью развернуто    
+    frameSchedule.style.height = "1387"; // если данные не обновятся - расписание будет ролностью развернуто
   </script>
   </body>
 </html>
