--- a/sched.html
+++ b/sched.html
@@ -66,8 +66,8 @@
             </a>
             <a class="nav__logo" href="index.html">
               <picture>
-                <source srcset="images/sd_logo_150x83.webp" type="image/webp">
-                <img src="images/sd_logo_150x83.png" width="150" height="83" alt="Логотит студии">
+                <source srcset="images/logo_sky_dance.webp" type="image/webp">
+                <img src="images/logo_sky_dance.png" width="150" height="83" alt="Логотит студии">
               </picture>
             </a>
             <a class="nav__btn  nav__btn--close"></a>  <!-- по умолчанию открыто -->
@@ -151,7 +151,7 @@
           </ul>
         </div>
       </footer>
-    </div>    
+    </div>
 
   <script src="js/script.js"></script>
   </body>
