--- a/sched.html
+++ b/sched.html
@@ -153,6 +153,28 @@
       </footer>
     </div>
 
-  <script src="js/script.js"></script>
+    <script src="js/script.js"></script>
+    <!-- jquery -->
+    <script src="js/jquery-1.7.2.min.js" type="text/javascript"></script>
+    <!-- easing plugin ( optional ) -->
+    <script src="js/easing.js" type="text/javascript"></script>
+    <!-- UItoTop plugin -->
+    <script src="js/jquery.ui.totop.js" type="text/javascript"></script>
+    <!-- Starting the plugin -->
+    <script type="text/javascript">
+      $(document).ready(function() {
+      /*
+      var defaults = {
+      containerID: 'toTop', // fading element id
+      containerHoverID: 'toTopHover', // fading element hover id
+      scrollSpeed: 1200,
+      easingType: 'linear'
+      };
+      */
+       
+      $().UItoTop({ easingType: 'easeOutQuart' });
+       
+      });
+    </script>
   </body>
 </html>
