добавлен эффект нажатия кнопок

--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@
             <!--</div>-->
           </ul>
           <div class="nav__feedback">
-            <!--<p class="nav__feedback--item">Записаться</p>
-            <p class="nav__feedback--item">Перезвоните мне</p>-->
+            <p class="nav__feedback--tel">тел. 700-228</p>
+            <!--<p class="nav__feedback--item">Записаться</p>-->
+            <!--<p class="nav__feedback--item">Перезвоните мне</p>-->
             <!— VK Widget —>
             <div id="nav__feedback-vk"></div>
               <script type="text/javascript">
@@ -131,7 +132,7 @@
             </div>
             <ul class="social">
               <li class="social__item">
-                <a class="social__item  social__item--vk" href="https://vk.com/k.kislitsina">
+                <a class="social__item  social__item--vk" href="https://vk.com/k.kislitsina" target="_blank">
                   <svg>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#social__item--vk">
                     </use>
@@ -139,15 +140,7 @@
                 </a>
               </li>
               <li class="social__item">
-                <a class="social__item  social__item--tw" href="twitter.com">
-                  <svg>
-                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#social__item--tw">
-                    </use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social__item">
-                <a class="social__item  social__item--inst" href="instagram.com">
+                <a class="social__item  social__item--inst" href="instagram.com" target="_blank">
                   <svg>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#social__item--inst">
                     </use>
@@ -171,7 +164,7 @@
             </div>
             <ul class="social">
               <li class="social__item">
-                <a class="social__item  social__item--vk" href="https://vk.com/plaza911">
+                <a class="social__item  social__item--vk" href="https://vk.com/plaza911" target="_blank">
                   <svg>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#social__item--vk">
                     </use>
@@ -179,15 +172,7 @@
                 </a>
               </li>
               <li class="social__item">
-                <a class="social__item  social__item--tw" href="twitter.com">
-                  <svg>
-                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#social__item--tw">
-                    </use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social__item">
-                <a class="social__item  social__item--inst" href="instagram.com">
+                <a class="social__item  social__item--inst" href="instagram.com" target="_blank">
                   <svg>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#social__item--inst">
                     </use>
@@ -211,7 +196,7 @@
             </div>
             <ul class="social">
               <li class="social__item">
-                <a class="social__item  social__item--vk" href="https://vk.com/galina_ho">
+                <a class="social__item  social__item--vk" href="https://vk.com/galina_ho" target="_blank">
                   <svg>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#social__item--vk">
                     </use>
@@ -219,15 +204,7 @@
                 </a>
               </li>
               <li class="social__item">
-                <a class="social__item  social__item--tw" href="twitter.com">
-                  <svg>
-                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#social__item--tw">
-                    </use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social__item">
-                <a class="social__item  social__item--inst" href="instagram.com">
+                <a class="social__item  social__item--inst" href="instagram.com" target="_blank">
                   <svg>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#social__item--inst">
                     </use>
@@ -251,7 +228,7 @@
             </div>
             <ul class="social">
               <li class="social__item">
-                <a class="social__item  social__item--vk" href="https://vk.com/a.grigoricheva">
+                <a class="social__item  social__item--vk" href="https://vk.com/a.grigoricheva" target="_blank">
                   <svg>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#social__item--vk">
                     </use>
@@ -259,15 +236,7 @@
                 </a>
               </li>
               <li class="social__item">
-                <a class="social__item  social__item--tw" href="twitter.com">
-                  <svg>
-                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#social__item--tw">
-                    </use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social__item">
-                <a class="social__item  social__item--inst" href="instagram.com">
+                <a class="social__item  social__item--inst" href="instagram.com" target="_blank">
                   <svg>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#social__item--inst">
                     </use>
@@ -331,7 +300,7 @@
         </a>
         <ul class="social">
           <li class="social__item">
-            <a class="social__item  social__item--vk" href="https://vk.com/skydancestudio">
+            <a class="social__item  social__item--vk" href="https://vk.com/skydancestudio" target="_blank">
               <svg>
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#social__item-footer--vk">
                 </use>
@@ -339,7 +308,7 @@
             </a>
           </li>
           <li class="social__item">
-            <a class="social__item  social__item--tw" href="twitter.com">
+            <a class="social__item  social__item--tw" href="twitter.com" target="_blank">
               <svg>
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#social__item-footer--tw">
                 </use>
@@ -347,7 +316,7 @@
             </a>
           </li>
           <li class="social__item">
-            <a class="social__item  social__item--inst" href="instagram.com">
+            <a class="social__item  social__item--inst" href="instagram.com" target="_blank">
               <svg class="footer__svg">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#social__item-footer--inst">
                 </use>
