--- a/sched.html
+++ b/sched.html
@@ -90,6 +90,7 @@
             <!--</div>-->
           </ul>
           <div class="nav__feedback">
+            <p class="nav__feedback--tel">тел. 700-228</p>
             <!--<p class="nav__feedback--item">Записаться</p>
             <p class="nav__feedback--item">Перезвоните мне</p>-->
             <!— VK Widget —>
