исправлены ошибки после прогонки валидатором

--- a/index.html
+++ b/index.html
@@ -91,9 +91,7 @@
           </ul>
           <div class="nav__feedback">
             <p class="nav__feedback--tel">тел. 700-228</p>
-            <!--<p class="nav__feedback--item">Записаться</p>-->
-            <!--<p class="nav__feedback--item">Перезвоните мне</p>-->
-            <!— VK Widget —>
+            <!-- VK Widget -->
             <div id="nav__feedback-vk"></div>
               <script type="text/javascript">
                 VK.Widgets.CommunityMessages("nav__feedback-vk", 54275923, {tooltipButtonText: "Есть вопрос?"});
@@ -260,7 +258,7 @@
               Вход со стороны парковки
             </address>
             <!-- Google map только на планшетах и десктопах -->
-            <iframe class="contacts__google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2327.0447081718435!2d48.39535431549522!3d54.32084098019481!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x415d3769a88a2963%3A0x18063174b6a45017!2sSkyDance+studio!5e0!3m2!1sru!2sru!4v1487415900789" width="345" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <iframe class="contacts__google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2327.0447081718435!2d48.39535431549522!3d54.32084098019481!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x415d3769a88a2963%3A0x18063174b6a45017!2sSkyDance+studio!5e0!3m2!1sru!2sru!4v1487415900789" width="345" height="300" style="border:0" allowfullscreen></iframe>
             <!--
             <picture class="contacts__yandex-map">
               <source srcset="images/map_320x240.webp" type="image/webp">
