--- a/sched.html
+++ b/sched.html
@@ -91,9 +91,7 @@
           </ul>
           <div class="nav__feedback">
             <p class="nav__feedback--tel">тел. 700-228</p>
-            <!--<p class="nav__feedback--item">Записаться</p>
-            <p class="nav__feedback--item">Перезвоните мне</p>-->
-            <!— VK Widget —>
+            <!-- VK Widget -->
             <div id="nav__feedback-vk"></div>
               <script type="text/javascript">
               VK.Widgets.CommunityMessages("nav__feedback-vk", 54275923, {tooltipButtonText: "Есть вопрос?"});
