--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </h3>
             <picture class="teachers__photo">
               <source srcset="images/kseniya.webp" type="image/webp">
-              <img src="images/kseniya.jpg" width="280" alt="Фото Ксения Кислицина">
+              <img src="images/kseniya.jpg" alt="Фото Ксения Кислицина">
             </picture>
             <div class="teachers__lessons">
               <strong>Направления:</strong>
