--- a/sched.html
+++ b/sched.html
@@ -61,8 +61,7 @@
       <nav class="nav">
         <div class="nav__wrapper">
           <div class="nav__menu">
-            <a class="nav__logo-text">  <!-- href на главной странице не указываем -->
-              <!--<img class="nav__img" src="logo.jpg" alt="PINK logo">-->
+            <a class="nav__logo-text" href="index.html">                
               Skydance Studio
             </a>
             <a class="nav__logo" href="index.html">
