Добавлена кнопка перезвоните мне. Убраны width у ссылок для фотографий

--- a/index.html
+++ b/index.html
@@ -79,18 +79,19 @@
                 <a class="nav__link" href="#about">О нас</a>
               </li>
               <li class="nav__item">
-                <a class="nav__link" href="#teachers">Наши тренеры</a>
+                <a class="nav__link" href="#teachers">Наши преподаватели</a>
               </li>
               <li class="nav__item">
                 <a class="nav__link" href="sched.html">Расписание</a>
               </li>
               <li class="nav__item">
-                <a class="nav__link" href="#contacts">Как нас найти</a>
+                <a class="nav__link" href="#contacts">Контакты</a>
               </li>
             <!--</div>-->
           </ul>
           <div class="nav__feedback">
             <p class="nav__feedback--tel">тел. 700-228</p>
+            <a class="nav__feedback--callme" href="/#callme">перезвоните мне</a>
             <!-- VK Widget -->
             <div id="nav__feedback-vk"></div>
               <script type="text/javascript">
@@ -114,7 +115,7 @@
 
     <section class="teachers" id="teachers">
       <div class="teachers__wrapper">
-        <h2 class="teachers__title">Тренеры</h2>
+        <h2 class="teachers__title">Преподаватели</h2>
         <div class="teachers__items">
           <article class="teachers__item">
             <h3 class="teachers__name">
@@ -154,7 +155,7 @@
             </h3>
             <picture class="teachers__photo">
               <source srcset="images/mary.webp" type="image/webp">
-              <img src="images/mary.jpg" width="280" alt="Фото Мария Быкина">
+              <img src="images/mary.jpg" alt="Фото Мария Быкина">
             </picture>
             <div class="teachers__lessons">
               <strong>Направления:</strong>
@@ -186,7 +187,7 @@
             </h3>
             <picture class="teachers__photo">
               <source srcset="images/galya.webp" type="image/webp">
-              <img src="images/galya.jpg" width="280" alt="Фото Галина Хорольская">
+              <img src="images/galya.jpg" alt="Фото Галина Хорольская">
             </picture>
             <div class="teachers__lessons">
               <strong>Направления:</strong>
@@ -218,7 +219,7 @@
             </h3>
             <picture class="teachers__photo">
               <source srcset="images/alla.webp" type="image/webp">
-              <img src="images/alla.jpg" width="280" alt="Фото Алла Григоричева">
+              <img src="images/alla.jpg" alt="Фото Алла Григоричева">
             </picture>
             <div class="teachers__lessons">
               <strong>Направления:</strong>
