--- a/sched.html
+++ b/sched.html
@@ -61,7 +61,7 @@
       <nav class="nav">
         <div class="nav__wrapper">
           <div class="nav__menu">
-            <a class="nav__logo-text" href="index.html">                
+            <a class="nav__logo-text" href="index.html">
               Skydance Studio
             </a>
             <a class="nav__logo" href="index.html">
@@ -84,16 +84,17 @@
                 <a class="nav__link" href="#sched.html">Расписание</a>
               </li>
               <li class="nav__item">
-                <a class="nav__link" href="index.html#contacts">Как нас найти</a>
+                <a class="nav__link" href="index.html#contacts">Контакты</a>
               </li>
             <!--</div>-->
           </ul>
           <div class="nav__feedback">
             <p class="nav__feedback--tel">тел. 700-228</p>
+            <a class="nav__feedback--callme" href="/#callme">перезвоните мне</a>
             <!-- VK Widget -->
             <div id="nav__feedback-vk"></div>
               <script type="text/javascript">
-              VK.Widgets.CommunityMessages("nav__feedback-vk", 54275923, {tooltipButtonText: "Есть вопрос?"});
+                VK.Widgets.CommunityMessages("nav__feedback-vk", 54275923, {tooltipButtonText: "Есть вопрос?"});
               </script>
           </div>
         </div>
