--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
                 <a class="nav__link" href="#about">О нас</a>
               </li>
               <li class="nav__item">
-                <a class="nav__link" href="#teachers">Наши преподаватели</a>
+                <a class="nav__link" href="/news.html">Новости</a>
               </li>
               <li class="nav__item">
-                <a class="nav__link" href="sched.html">Расписание</a>
+                <a class="nav__link" href="/sched.html">Расписание</a>
               </li>
               <li class="nav__item">
                 <a class="nav__link" href="#contacts">Контакты</a>
