Сделана функция уменьшения меню при прокрутке

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="nav__wrapper">
           <div class="nav__menu">
             <a class="nav__btn  nav__btn--close"></a>  <!-- по умолчанию открыто -->
-            <a class="nav__tel" href="tel:+78422700228">700-228</a>
+            <a class="nav__tel" href="tel:+78422700228">тел. 700-228</a>
           </div>
           
           <div class="nav__menu-footer">
