Исправлен заголовок в index.html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>PD73.ru - studio</title>
+    <title>Занятия Pole Dance в Ульяновске|Sky Dance Studio</title>
+    <meta name="description" content="Школа танцев Sky Dance Studio">
+    <meta name="keywords" content="">
     <script type="text/javascript" src="//vk.com/js/api/openapi.js?139"></script>
     <link rel="stylesheet" href="css/style.min.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
   </head>
   <body>
     <svg style="display:none">
