Добавляем фотографию для блока с адресом

--- a/index.html
+++ b/index.html
@@ -260,8 +260,10 @@
         <h2 class="contacts__title">Как нас найти</h2>
         <div class="contacts__map">
           <address class="contacts__address">
-            г. Ульяновск, 2-й переулок Мира, 24 (рядом с ТЦ "Мираж"). <br>
-            Вход со стороны парковки
+            <p class="contacts__address-text">
+              г. Ульяновск, 2-й переулок Мира, 24 (рядом с ТЦ "Мираж"). <br>
+              Вход со стороны парковки                
+            </p>            
           </address>
           <!-- Google map только на планшетах и десктопах -->
           <iframe class="contacts__google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2327.0447081718435!2d48.39535431549522!3d54.32084098019481!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x415d3769a88a2963%3A0x18063174b6a45017!2sSkyDance+studio!5e0!3m2!1sru!2sru!4v1487415900789" width="345" height="300" style="border:0" allowfullscreen></iframe>
