Добавление формы обратной связи (перезвоните мне)

--- a/index.html
+++ b/index.html
@@ -304,6 +304,19 @@
     </footer>
 
 
+    <section class="feedback">
+      <button class="feedback__btn--close"></button>
+      <div class="feedback__header">
+        <h3 class="feedback__title">Оставьте заявку</h3>
+        <p class="feedback__text">
+          и наш консультант свяжется с вами в ближайшее время
+        </p>  
+      </div>      
+      <form class="feedback__form">
+        
+      </form>
+    </section>
+
   <script src="js/script.js"></script>
   <!-- jquery -->
   <script src="js/jquery-1.7.2.min.js" type="text/javascript"></script>
@@ -338,6 +351,7 @@
       });
     });
   </script>
+
 
   </body>
 </html>
