добавлено окно для обратной связи

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
     </footer>
 
 
-    <section class="feedback">
+    <section class="feedback feedback--hidden">
       <button class="feedback__btn--close"></button>
       <div class="feedback__header">
         <h3 class="feedback__title">Оставьте заявку</h3>
@@ -316,7 +316,7 @@
         <div class="feedback__form-block">        
           <input type="text" id="username" name="username" placeholder="Ваше имя"/>        
           <input type="text" id="phone" name="phone" placeholder="Телефон"/>
-          <button class="feedback__form-submit" type="submit">Заказать</button>
+          <button class="feedback__form-submit" type="submit">Отправить</button>
         </div>        
       </form>
     </section>
@@ -355,7 +355,6 @@
       });
     });
   </script>
-
-
+  
   </body>
 </html>
